tests/trybuild/stages/system_missing_comma.stderr
error: no rules expected the token `flush`
  --> tests/trybuild/stages/system_missing_comma.rs:19:5
   |
19 |     flush
   |     ^^^^^ no rules expected this token in macro call
